# Swish

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: main.yml  multiarch-docker-hub.yml
sevenz-rust/: Cargo.toml
src/: ca_bundle.rs  lib.rs  main.rs
src/api/: mod.rs
src/swissfiles/uploadparameters/: mod.rs
