[package]
name = "swish"
version = "1.0.6"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
curl = "0.4.46"
indicatif = "0.17"
log = "0.4"
serde_json = "1.0"
sha2 = "0.10"
simple_logger = "5.0"
openssl-sys = { version = "0.9", features = ["vendored"] }
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.11"

[build-dependencies]
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.11"

