[package]
name = "swish"
version = "1.0.7"
edition = "2021"
build = "build.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5.31", features = ["derive"] }
curl = "0.4.46"
indicatif = "0.17"
log = "0.4.26"
serde_json = "1.0.140"
sha2 = "0.10"
simple_logger = "5.0"
regex = "1.11"
sevenz-rust = { path = "sevenz-rust", features = ["compress", "aes256"] }

[build-dependencies]
#rustls = "0.23"
#reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.11"
